--- a/Marvellous Assignments/srcAssignment11/app/app.component.html
+++ b/Marvellous Assignments/srcAssignment11/app/app.component.html
@@ -1,7 +1,5 @@
 <div class="col-sm-8">
-  <div class="panel panel-primary">
-    <form>
-    <div class="panel-body">
+    <div class="card card-block card-header">
         <div class="row">
           <div class="text-center col-sm-6">
             <h3>
@@ -44,6 +42,4 @@
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
     </div>
-  </form>
-  </div>
 </div>
